<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FormFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/field_header"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/entryField"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/field_placeholder"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/radio_header"
                android:textAlignment="center"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/textFonts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/oswald"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_type" />

                <RadioButton
                    android:id="@+id/roboto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/second_type" />

                <RadioButton
                    android:id="@+id/monomakh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/third_type" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:text="@string/submit_btn" />

                <Button
                    android:id="@+id/clearBtn"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:text="@string/clear_btn" />
            </LinearLayout>

            <Button
                android:id="@+id/showResultBtn"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:text="@string/show_result_btn" />

            <Button
                android:id="@+id/showRecordsBtn"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:text="@string/show_records_btn" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>